# NIDS

./: .gitignore  CMakeLists.txt  Makefile  README.md  capture.c  compile_commands.json  config.json
include/: config.h  flow_feature_extractor.h  nids_backend.h
src/: config.c  flow_analyser.c  flow_feature_extractor.c  flow_feature_extractor.h  log.c  nids_main.c  packet_queue.c  sniffer.c
tests/: test_l1_model.c
